Adjusting a test case.